# platform.core.telephony.libtapi-legacy

./: CMakeLists.txt  project.config  tapi.pc.in
include/: ITapiCall.h  ITapiGps.h  ITapiModem.h  ITapiNetText.h  ITapiNetwork.h  ITapiPS.h  ITapiPhonebook.h  ITapiSap.h  ITapiSat.h  ITapiSim.h  ITapiSs.h  TapiUtility.h  TelCall.h  TelDefines.h  TelDisplay.h  TelErr.h  TelMisc.h  TelNetwork.h  TelPower.h  TelSat.h  TelSatEnvelope.h  TelSatObj.h  TelSatProactvCmd.h  TelSim.h  TelSms.h  TelSs.h  tapi_common.h  tapi_event.h  tapi_sat.h  tapi_type.h
packaging/: libtapi.changes  libtapi.spec  libtapi.spec~
src/: common.h  tapi_call.c  tapi_common.c  tapi_gps.c  tapi_log.h  tapi_modem.c  tapi_network.c  tapi_phonebook.c  tapi_sap.c  tapi_sat.c  tapi_sim.c  tapi_sms.c  tapi_ss.c
test_src/: CMakeLists.txt  call.c  call.h  gps.c  gps.h  main.c  menu.c  menu.h  modem.c  modem.h  network.c  network.h  phonebook.c  phonebook.h  sat.c  sat.h  sim.c  sim.h  sms.c  sms.h  sms_util.c  sms_util.h  ss.c  ss.h
